# opencv_samples

./: .gitignore  README.md
cmds/: Mybuild  facedetect.cpp
data_samples/: Mybuild
opencv_samples/cmds/: Mybuild  kmeans.cpp  peopledetect.cpp  qrcode.cpp  squares.cpp
opencv_samples/cmds/edgedetection/: CMakeLists.txt  Mybuild  edgedetection.cpp
opencv_samples/cmds/embedded_facedetect/: CMakeLists.txt  Mybuild  README.md  embedded_facedetect.cpp  eye_cascade.inc  face_cascade.inc
opencv_samples/cmds/facedetect/: CMakeLists.txt  Mybuild  README.md  facedetect.cpp
opencv_samples/cmds/haar_cnn_demo/: CMakeLists.txt  Mybuild  README.md  cnn_inference.cpp  cnn_inference.h  cnn_model.h  conv1_bias.h  conv1_weight.h  conv2_bias.h  conv2_weight.h  fc1_bias.h  fc1_weight.h  fc2_bias.h  fc2_weight.h  haar_cnn_demo.cpp
opencv_samples/cmds/kmeans/: CMakeLists.txt  Mybuild  kmeans.cpp
opencv_samples/cmds/peopledetect/: CMakeLists.txt  Mybuild  README.md  peopledetect.cpp
opencv_samples/cmds/qrcode/: CMakeLists.txt  Mybuild  README.md  qrcode.cpp
opencv_samples/cmds/squares/: CMakeLists.txt  Mybuild  README.md  squares.cpp
opencv_samples/data_samples/: Mybuild
opencv_samples/data_samples/cnn_test/: Mybuild
opencv_samples/data_samples/faces/: Mybuild
opencv_samples/templates/arm-qemu/: build.conf  mods.conf  system_start.inc
opencv_samples/templates/stm32f746g-discovery/: build.conf  lds.conf  mods.conf  start_script.inc  system_start.inc
opencv_samples/templates/stm32f769i-discovery-extmem/: lds.conf  mods.conf  (+1 more)
templates/arm-qemu/: build.conf  mods.conf
(+9 files in other folders)
